# backend/src/modules/auth/auth.routes.ts
@@ -1,5 +1,5 @@
 import { Router } from 'express';
-import { login, logout, me } from './auth.controller';
+import { login, logout, me, changePasswordHandler } from './auth.controller';
 import { authMiddleware } from '../../middleware/authMiddleware';
 
 const router = Router();
@@ -7,5 +7,6 @@ const router = Router();
 router.post('/login', login);
 router.post('/logout', logout);
 router.get('/me', authMiddleware, me);
+router.post('/change-password', authMiddleware, changePasswordHandler);
 
 export default router;
